# gamingServer

./: CMakeLists.txt  Cell.h  ChessProject_en_BE.ts  README  bishop.cpp  bishop.h  chessPiece.qrc  chessparty.cpp  chessparty.h  chesspiece.cpp  chesspiece.h  connserver.cpp  connserver.h  formsd.cpp  formsd.h  formsd.ui  gameboard.cpp  gameboard.h  gameboard.ui  king.cpp  king.h  knight.cpp  knight.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pawn.cpp  pawn.h  queen.cpp  queen.h  tower.cpp  tower.h
GameSelection/: CMakeLists.txt  connserver.cpp  connserver.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
